# wake_world_project

./: .gitignore  README.md  RUN_ORDER.md  augment_hard_negatives.py  collect_hard_negatives.py  confidence_histogram.py  config.yaml  copy_false_alarms.py  create_dataset.py  create_dataset_2.py  dataset.csv  dataset2.csv  dataset_manifest.csv  error_report.txt  file_test_simulation.py  find_hard_negatives.py  hard_negative_report.txt  hard_negatives.txt  hard_negatives_report.txt  identify_hard_negatives.py  inference.py  inference_config.pkl  label_encoder.pkl  live_test.py  pyproject.toml  realtime_detection.py  requirements.txt  run_wakeword.py  scaler.pkl  simple_ui.py  train_model.py
evaluation_report/: report.json  report.md
src/wakeword/: __init__.py  __main__.py  cli.py  collect.py  config.py  dataset.py  evaluate.py  features.py  file_test.py  inference.py  mine_hard_negatives.py  realtime.py  train.py  vad.py
tests/: conftest.py  test_features.py  test_inference.py  test_vad.py
