[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "wakeword"
version = "0.1.0"
description = "Wake word detection using stacking ensemble"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
wakeword = "wakeword.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
